# webex-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  skaffold.yaml
app/: bot_commands.py  main.py  prompts.py  utils.py
app/helpers/: common_func.py  jiraapi.py  openaiapi.py
deploy/common/: config.yaml  deployment.yaml  kustomization.yaml  serviceaccount.yaml
deploy/production/: kustomization.yaml
